// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should aggregate releases (mutiple releases, repeating environments) 1`] = `
Object {
  "indicators": Array [
    Object {
      "name": "Last deployment date (SIT)",
      "rating": 0,
      "value": "Oct 10",
    },
    Object {
      "name": "Total deployments (SIT)",
      "rating": 4,
      "value": 2,
    },
    Object {
      "name": "Successful deployment rate (SIT)",
      "rating": 100,
      "value": "100%",
    },
    Object {
      "name": "Non master deployments (SIT)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PP)",
      "rating": 0,
      "value": "Oct 10",
    },
    Object {
      "name": "Total deployments (PP)",
      "rating": 4,
      "value": 2,
    },
    Object {
      "name": "Successful deployment rate (PP)",
      "rating": 100,
      "value": "100%",
    },
    Object {
      "name": "Non master deployments (PP)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PROD)",
      "rating": 0,
      "value": "never",
    },
    Object {
      "name": "Total deployments (PROD)",
      "rating": 0,
      "value": 0,
    },
    Object {
      "name": "Successful deployment rate (PROD)",
      "rating": 0,
      "value": "0%",
    },
    Object {
      "name": "Non master deployments (PROD)",
      "rating": 100,
      "value": 0,
    },
  ],
  "name": "Releases",
  "rating": 43,
}
`;

exports[`it should aggregate releases (single release) 1`] = `
Object {
  "indicators": Array [
    Object {
      "name": "Last deployment date (SIT)",
      "rating": 0,
      "value": "Oct 10",
    },
    Object {
      "name": "Total deployments (SIT)",
      "rating": 2,
      "value": 1,
    },
    Object {
      "name": "Successful deployment rate (SIT)",
      "rating": 100,
      "value": "100%",
    },
    Object {
      "name": "Non master deployments (SIT)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PP)",
      "rating": 0,
      "value": "never",
    },
    Object {
      "name": "Total deployments (PP)",
      "rating": 0,
      "value": 0,
    },
    Object {
      "name": "Successful deployment rate (PP)",
      "rating": 0,
      "value": "0%",
    },
    Object {
      "name": "Non master deployments (PP)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PROD)",
      "rating": 0,
      "value": "never",
    },
    Object {
      "name": "Total deployments (PROD)",
      "rating": 0,
      "value": 0,
    },
    Object {
      "name": "Successful deployment rate (PROD)",
      "rating": 0,
      "value": "0%",
    },
    Object {
      "name": "Non master deployments (PROD)",
      "rating": 100,
      "value": 0,
    },
  ],
  "name": "Releases",
  "rating": 34,
}
`;

exports[`it should aggregate releases (single release) 2`] = `
Object {
  "indicators": Array [
    Object {
      "name": "Last deployment date (SIT)",
      "rating": 0,
      "value": "never",
    },
    Object {
      "name": "Total deployments (SIT)",
      "rating": 0,
      "value": 0,
    },
    Object {
      "name": "Successful deployment rate (SIT)",
      "rating": 0,
      "value": "0%",
    },
    Object {
      "name": "Non master deployments (SIT)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PP)",
      "rating": 0,
      "value": "never",
    },
    Object {
      "name": "Total deployments (PP)",
      "rating": 0,
      "value": 0,
    },
    Object {
      "name": "Successful deployment rate (PP)",
      "rating": 0,
      "value": "0%",
    },
    Object {
      "name": "Non master deployments (PP)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PROD)",
      "rating": 0,
      "value": "never",
    },
    Object {
      "name": "Total deployments (PROD)",
      "rating": 0,
      "value": 0,
    },
    Object {
      "name": "Successful deployment rate (PROD)",
      "rating": 0,
      "value": "0%",
    },
    Object {
      "name": "Non master deployments (PROD)",
      "rating": 100,
      "value": 0,
    },
  ],
  "name": "Releases",
  "rating": 25,
}
`;

exports[`it should aggregate releases (two releases, different environments) 1`] = `
Object {
  "indicators": Array [
    Object {
      "name": "Last deployment date (SIT)",
      "rating": 0,
      "value": "Oct 10",
    },
    Object {
      "name": "Total deployments (SIT)",
      "rating": 2,
      "value": 1,
    },
    Object {
      "name": "Successful deployment rate (SIT)",
      "rating": 100,
      "value": "100%",
    },
    Object {
      "name": "Non master deployments (SIT)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PP)",
      "rating": 0,
      "value": "Oct 10",
    },
    Object {
      "name": "Total deployments (PP)",
      "rating": 2,
      "value": 1,
    },
    Object {
      "name": "Successful deployment rate (PP)",
      "rating": 100,
      "value": "100%",
    },
    Object {
      "name": "Non master deployments (PP)",
      "rating": 100,
      "value": 0,
    },
    Object {
      "name": "Last deployment date (PROD)",
      "rating": 0,
      "value": "never",
    },
    Object {
      "name": "Total deployments (PROD)",
      "rating": 0,
      "value": 0,
    },
    Object {
      "name": "Successful deployment rate (PROD)",
      "rating": 0,
      "value": "0%",
    },
    Object {
      "name": "Non master deployments (PROD)",
      "rating": 100,
      "value": 0,
    },
  ],
  "name": "Releases",
  "rating": 42,
}
`;
